kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-actions-sample-2
spec:
  selector:
    matchLabels:
      app: github-actions-sample-2
  template:
    metadata:
      labels:
        app: github-actions-sample-2
    spec:
      containers:
        - image: ghcr.io/cc-metinyavuz/github-actions-sample:master
          imagePullPolicy: Always
          name: github-actions-sample-2
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
