kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-actions-sample-2
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: github-actions-sample-2
  type: ClusterIP
